Highlighted post title size on mobile fix

--- a/style.css
+++ b/style.css
@@ -108,7 +108,8 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 0.5em;
 }
 
-h1 {
+h1,
+.highlighted-post .entry-title {
 	font-size: 48px;
 }
 
@@ -278,7 +279,8 @@ figcaption {
 }
 
 @media (max-width: 1200px) {
-	h1 {
+	h1,
+	.highlighted-post .entry-title {
 		font-size: 40px;
 	}
 	
@@ -304,7 +306,8 @@ figcaption {
 }
 
 @media (max-width: 992px) {
-	h1 {
+	h1,
+	.highlighted-post .entry-title {
 		font-size: 32px;
 	}
 	
@@ -318,7 +321,8 @@ figcaption {
 		font-size: 14px;
 	}
 
-	h1 {
+	h1,
+	.highlighted-post .entry-title {
 		font-size: 28px;
 	}
 	
@@ -2629,10 +2633,6 @@ a:hover, a:active {
 .highlighted-post.has-post-thumbnail .entry-header,
 .feat-img--top .entry-header {
 	padding: 35px 0 0;
-}
-
-.highlighted-post .entry-title {
-	font-size: 48px;
 }
 
 .post-title--top .entry-header,
